[project]
name = "KayTool"
description ="KayTool boosts ComfyUI workflow efficiency with ultra-practical tools, including image processing (resize, color, blur, expand, merge, crop), background/mask tasks via BiRefNet/RemBG, wireless data transfer (Get & Out), AI translation (Tencent/Baidu), dynamic math operations, flexible text handling, precision sliders, metadata and color profile-supported image saving, batch processing via image folder loading, canvas workflow node map export as PNG with embedding metadata, quick Run options via right-click (Run Group/Node), and custom ComfyUI logo integration."
version = "0.37.3"
license = {file = "LICENSE"}
dependencies = ["rembg, timm"]

[project.urls]
Repository = "https://github.com/kk8bit/KayTool"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kk8bit"
DisplayName = "KayTool"
Icon = ""
